@@ -78,6 +78,8 @@
  - [DS-62] Not right encoding for license and extracted texts - ID: 2234532
  - [DS-84] Improve API for "IgnoreAuthorization" blocks - ID: 1687783
  - [DS-58] Double quote problem in some fields of JSPUI (continued) - ID: 2528065
+ - [DS-88] Anonymous group don't works as subgroup - ID: 1688445
+ - [DS-61] IP Authentication only works on logged in users - ID: 2088431
  
 (Paulo Jobim)
  - SF Patch [2655052] Authors re-ordered when item edited (xmlui)
